feat: complete generic compiled GraphQL runtime